GNOME Bugzilla – Bug 620898
Don't free transfer full struct pointers because we can't do it safely
Last modified: 2010-06-15 10:17:34 UTC
* Most libraries which are sending back structs as transfer-full are either annotated incorrectly or should be sending boxed types * It is much better to throw a warning and leak memory than it is to call free on an unknown struct pointer. Doing so may cause a double free * Specific case is gdk_atom_intern where a GdkAtom is not actually a pointer but an integer stuffed into a pointer type
Created attachment 162971 [details] [review] Don't free transfer full struct pointers because we can't do it safely
Review of attachment 162971 [details] [review]: We can actually free those when they are foreign because we have an appropriate release function, but this can go in a future patch.
Attachment 162971 [details] pushed as 606018a - Don't free transfer full struct pointers because we can't do it safely