Don't free transfer full struct pointers because we can't do it safely

* Most libraries which are sending back structs as transfer-full
  are either annotated incorrectly or should be sending boxed types
* It is much better to throw a warning and leak memory than it is to
  call free on an unknown struct pointer.  Doing so may cause
  a double free
* Specific case is gdk_atom_intern where a GdkAtom is not actually a pointer
  but an integer stuffed into a pointer type

https://bugzilla.gnome.org/show_bug.cgi?id=620898